# universal-o3-assistant

./: README.md  pyproject.toml
backlog/: backlog.md  generate_task_details.py
backlog/tasks/: T01_project_scaffolding.md  T02_pydantic_models.md  T03_ingestion_connector_interface_git_connector.md  T04_document_normalizer_node.md  T05_embedding_&_enrichment_node.md  T06_vector_store_integration_qdrant_pgvector.md  T07_retriever_node_implementation.md  T08_rag_node_prompt_templates.md  T09_uncertainty_scorer_logit_entropy.md  T10_auditor_node_verdict_flow.md  T11_dlq_supervisor_agent_with_auto_fix.md  T12_human_in_loop_streamlit_dashboard.md  T13_observability_stack_opentelemetry_prometheus.md  T14_regression_evaluation_framework.md
src/langgraph/: __init__.py  graph.py
src/uda/: __init__.py  api.py  models.py
src/uda/graph/: base.py
src/uda/ingest/: __init__.py  base.py  git.py
tests/T01/: test_graph.py  test_health.py
tests/T02/: test_models.py
tests/T03/: test_git_connector.py
