[tool.poetry]
name = "universal-data-assistant"
version = "0.1.0"
description = "Universal free-tier cooperative AI system for ingestion, indexing and expert Q&A assistant with uncertainty handling."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
langgraph = "^0.0.18"
langchain = "^0.1.16"
pydantic = "^2.6.4"
openai = "^1.23.0"
weaviate-client = "^4.5.4"
redis = "^5.0.0"
celery = "^5.3.6"
streamlit = "^1.32.2"
prometheus-client = "^0.20.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
tqdm = "^4.66.2"
datetime = "^5.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.3.3"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
